# silence

./: .gitignore  Felony.cabal  Felony.hs  Hisk.hs  Main.hs  README.md  fib.fl  fib.sl  higher-order.fl  higher-order.sl  silence.cabal  stdlib.sl  test.fl  test.hs
cbits/: Expression.c  Expression.h
examples/: fib.sl  higher-order.sl
examples/ffi/basic/: basic.c  basic.sl  makefile
examples/ffi/postgres/: makefile  postgres.c  postgres.sl
ffi_example/: example.c  example.dylib  example.h  ffi_example.sl  makefile  pg_example.c  postgres.sl
lib/: crime.fl  test.fl
src/: Felony.hs  Main.hs  Silence.hs
src/Felony/: Environment.hs  Evaluation.hs  Expression.hs  Lisp.hs  Monad.hs  Parser.hs  Primitives.hs  Repl.hs  Semantics.hs  Syntax.hs  Types.hs
src/Silence/: Expression.hs  FFI.hs  FFI.hsc  Primitives.hs  Semantics.hs  Syntax.hs
