name:                silence
version:             0.0.1
synopsis:            Lisp dialect designed to be both simple and structured.
homepage:            https://github.com/fhsjaagshs/felony
license:             MIT
author:              Nathaniel Symer
maintainer:          nate@symer.io
category:            Languages 
build-type:          Simple
cabal-version:       >=1.8
data-dir:            lib

executable silence
  main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
  build-depends:     base,
                     integer-gmp,
                     ghc-prim,
                     bytestring,
                     transformers,
                     mtl,
                     unordered-containers,
                     parsec,
                     optparse-applicative,
                     unix